- [done] remove transaction/value/@type
- [done] remove transaction/flow-type/@type
- [done] remove transaction/finance-type/@type
- [done] remove transaction/aid-type/@type
- [done] remove transaction/disbursement-channel/@type
- [done] remove transaction/tied-status/@type
- [done] remove document-link/category/@type
- [done] remove location/location-type/@type
- add budget as specified in the standard
- add planned-disbursement as specified in the standard
- [done] add conditions as specified in the standard
- [done] add result as specified in the standard
- [done] remove total-cost
- [done] remove budget-planned
- [done] remove related-initiative

*** Differences from the Standard

- not enforcing occurrence of iati-activity or its top-level children
- not enforcing order or occurrence of children of contact-info or
  transaction
- not enforcing when text content is required (e.g. iati-identifier)
- kept @xml:lang in transaction/disbursement-channel,
  transaction/tied-status, document-link/category, and
  location/location-type to allow specifying the language of the text
  label, and for consistency with other elements using references or
  codes (including default-tied-status)
- add @xml:lang to result/indicator/baseline, result/indicator/target,
  and result/indicator/actual

** Organisations

- [*] make total-budget/period-start/@iso-date required
- [*] make total-budget/period-end/@iso-date required
- [*] remove total-budget/value/@type
- [*] make recipient-org-budget/recipient-org/@ref required
- [*] remove recipient-org-budget/recipient-org/@type
- [*] make recipient-org-budget/period-start/@iso-date required
- [*] make recipient-org-budget/period-end/@iso-date required
- [*] remove recipient-org-budget/value/@type
- [*] remove recipient-country-budget/recipient-country/@ref
- [*] remove recipient-country-budget/recipient-country/@type
- [*] add recipient-country-budget/recipient-country/@code (required)