@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+
+<iati-activity>
+
+<budget type="X">
+  <period-start iso-date="2011-01-01">1 January 2011</period-start>
+  <period-end iso-date="2011-12-31">31 December 2011</period-end>
+  <value value-date="2011-01-01" currency="GBP">1000000</value>
+</budget>
+
+</iati-activity>
+
+</iati-activities>
